voovan update dockerfiler (#5590)
* Update pom.xml

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update benchmark_config.json

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update voovan.dockerfile

* Update pom.xml